# FEI_STU_Bachelor

./: README.md
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Project/: Clovece_Ladislav_Rajcsányi_97914 (Original 2018).py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Project/Ludo_(Refactored_2020)/: main.py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Seminars/Seminar 1/: n_angle.py  picture1.py  picture2.py  picture3.py  picture4.py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Seminars/Seminar 11/: 1.1.1 + 1.1.2.py  2.py  3.py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Seminars/Seminar 2/: 2.01.py  2.02.py  2.03.py  2.04.py  2.05.py  2.06.py  2.07.py  2.08.py  2.09.py  2.10.py  2.11.py  2.12.py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Seminars/Seminar 3/: 4.2.py  4.3_1.py  4.3_2.py  4.3_3.py  4.3_4.py  4.3_5.py  flower.py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Seminars/Seminar 4/: 4.01.py  4.02.py  4.03.py  4.04.py  4.05.py  4.06.py  4.07.py  4.08.py  4.09.py  4.10.py  4.11.py  4.12.py  4.13.1.py  4.13.2.py  4.13.3.py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Seminars/Seminar 5/: 5.1_Debugger.py  5.2.1.py  5.2.2.py  5.2.3.py  5.2.4.py  5.3.1.py  5.3.2.py  5.3.3.py  5.3.4.py  5.3.5.py
Year 1./1. Term ( Winter )/Programming_1_(B-PROG1)/Seminars/Seminar 6/: 6.1.1.py  (+10 more)
Year 1./2. Term ( Summer )/Programming 2 ( B-PROG2 )/Projects/Project_2/Project_2_(Refactored_2021)/: CMakeLists.txt  arena_visualization.c  arena_visualization.h  characters.c  characters.h  main.c  monster_hunt.c  monster_hunt.h
(+442 files in other folders)
